# sqlite-sourcecode-read

./: CMakeLists.txt  demo_main.cpp  main.cpp  yaoreadcopy.db
bld/: Makefile  config.status  fts5parse.c  lemon  libtclsqlite3.la  libtool  mkkeywordhash  opcodes.c  opcodes.h  pkgIndex.tcl  test-out.txt  zhou-test1.sh
bld/.libs/: libsqlite3.so.0.8.6  libtclsqlite3.soT
bld/testdir/: test.db
bld/tsrc/: config.h  fts5.c  parse.c  vdbe.c
note/: sqlitec文件分割.md  第一次配置.md
sqlite/test/: btree01.test  tester.tcl
sqlite/tool/: mksqlite3c.tcl  split-sqlite3c.tcl
src/: sqlite3-10-mem1.c  sqlite3-11-mem3.c  sqlite3-12-mem5.c  sqlite3-13-mem5.c  sqlite3-14-mutex_noop.c  sqlite3-15-mutex_noop.c  sqlite3-16-mutex_w32.c  sqlite3-17-malloc.c  sqlite3-18-printf.c  sqlite3-19-printf.c  sqlite3-2-sqliteInt.h  sqlite3-20-random.c  sqlite3-21-random.c  sqlite3-22-threads.c  sqlite3-23-utf.c  sqlite3-24-util.c  sqlite3-25-hash.c  sqlite3-26-opcodes.c  sqlite3-27-os_win.c  sqlite3-28-os_win.c  sqlite3-29-pcache.c  sqlite3-3-global.c  sqlite3-30-pcache.c  sqlite3-31-rowset.c  sqlite3-32-rowset.c  sqlite3-33-wal.c  sqlite3-34-btmutex.c  sqlite3-35-btree.c  sqlite3-36-backup.c  sqlite3-37-backup.c  sqlite3-38-vdbemem.c  sqlite3-39-vdbeaux.c  sqlite3-4-ctime.c  sqlite3-40-vdbeapi.c  sqlite3-41-vdbetrace.c  sqlite3-42-vdbeblob.c  sqlite3-43-vdbesort.c  sqlite3-44-memjournal.c  sqlite3-45-walker.c  sqlite3-46-walker.c  (+56 more)
